--- a/creators.html
+++ b/creators.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="./creators.html">CREATORS</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="./about.html">ABOUT</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,6 +44,7 @@
                         labore
                         et dolore magna aliqua.</p>
                     <div class="social-media">
+
                         <a href="https://www.linkedin.com/in/samarth-pyati/" target="_blank"><i
                                 class="fa-brands fa-linkedin fa-2xl"></i></a>
                         <a href="https://www.instagram.com/Samarth_pyati/" target="_blank"><i
