--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li><a href="./index.html">HOME</a></li>
 					<li><a href="./creators.html">CREATORS</a></li>
-					<li><a href="">ABOUT</a></li>
+					<li><a href="./about.html">ABOUT</a></li>
 				</ul>
 			</div>
 		</nav>
