--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <!-- navigation bar and header  -->
     <header>
         <center>
-            <h1><b> JUST DO IT </b></h1>
+            <h1><b> LETS DO IT </b></h1>
         </center>
         <nav class="navbar" id="Vertical">
             <div class="content">
@@ -33,17 +33,17 @@
 
     <main>
         <section class="about" id="about">
-            <h2 id="heading">About Just Do It</h2>
-            <p>Welcome to <span><b>"Just Do It"</b></span> - your ultimate todo list app!
+            <h2 id="heading">About Lets Do It</h2>
+            <p>Welcome to <span><b>"Lets Do It"</b></span> - your ultimate todo list app!
                 Keep track of your tasks, set
                 priorities, and get
                 things done. Our mission is to help you stay organized and productive in your daily life.</p>
             <h3>Project Overview</h3>
-            <p>"Just Do It" is a modern and user-friendly todo list application designed to streamline your task
+            <p><b>"Lets Do It"</b>is a modern and user-friendly todo list application designed to streamline your task
                 management. With a simple interface and powerful features, it's your go-to tool for staying on top of
                 your daily responsibilities. Our application boasts an intuitive interface and robust features, serving
                 as your ideal companion for staying organized and in control of your daily responsibilities.Whether
-                you're a seasoned task manager or just getting started, 'Just Do It' is here to make your daily life
+                you're a seasoned task manager or just getting started, 'Lets Do It' is here to make your daily life
                 more organized and stress-free. Join us on this productivity journey and take control of your tasks with
                 confidence."</p>
             <h3>Key Features</h3>
