--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- navigation bar and header  -->
 	<header>
 		<center>
-			<h1><b> JUST DO IT </b></h1>
+			<h1><b> LETS DO IT </b></h1>
 		</center>
 		<nav class="navbar" id="Vertical">
 			<div class="content">
