--- a/creators.html
+++ b/creators.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creators - Just Do It</title>
+    <title>Creators - Let`s Do It</title>
     <link rel="stylesheet" href="creators.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <!-- navigation bar and header -->
     <header>
         <center>
-            <h1><b> JUST DO IT </b></h1>
+            <h1><b> LETS DO IT </b></h1>
         </center>
         <nav class="navbar">
             <div class="content">
