--- a/creators.html
+++ b/creators.html
@@ -49,6 +49,8 @@
                                 class="fa-brands fa-linkedin fa-2xl"></i></a>
                         <a href="https://www.instagram.com/Samarth_pyati/" target="_blank"><i
                                 class="fa-brands fa-instagram fa-2xl"></i></a>
+                        <a href="https://www.instagram.com/Samarth_pyati/" target="_blank"><i
+                                class="fa-brands fa-github fa-2xl"></i></a>
                     </div>
                 </div>
                 <div class="creator">
@@ -58,9 +60,7 @@
                         labore
                         et dolore magna aliqua.</p>
                     <div class="social-media">
-                        <a href="https://twitter.com/creator2" target="_blank"><i
-                                class="fa-brands fa-linkedin fa-2xl"></i></a>
-                        <a href="https://instagram.com/creator2" target="_blank"><i
+                        <a href="https://www.instagram.com/mr.shmix/" target="_blank"><i
                                 class="fa-brands fa-instagram fa-2xl"></i></a>
                     </div>
                 </div>
