--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 	<script src="main.js"></script>
 	<script src="https://kit.fontawesome.com/6dbd7dcc73.js" crossorigin="anonymous"></script>
 	<!-- <script src="test.js"></script> -->
+	<footer>
+		<em>&copy;2023 All rights reserved.</em>
+	</footer>
 </body>
 
 </html>
