--- a/creators.html
+++ b/creators.html
@@ -40,9 +40,14 @@
                 <div class="creator">
                     <img src="assets/samarth_pyati.jpeg" alt="Samarth Pyati">
                     <h3>Samarth Sanjay Pyati</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
+                    <p>
+                        <em>
+                            - First Year Student at RVU<br>
+                            - B.Tech HONORS (2023-2024)<br>
+                            - Email: samarthsp.btech23@rvu.edu.in
+
+                        </em>
+                    </p>
                     <div class="social-media">
 
                         <a href="https://www.linkedin.com/in/samarth-pyati/" target="_blank"><i
@@ -56,9 +61,11 @@
                 <div class="creator">
                     <img src="assets/samarth_swarup.jpeg" alt="Samarth Swarup">
                     <h3>Samarth Swarup</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
+                    <p><em>
+                            - First Year Student at RVU<br>
+                            - B.Tech HONORS (2023-2024)<br>
+                            - Email: samarthk.btech23@rvu.edu.in
+                        </em></p>
                     <div class="social-media">
                         <a href="https://www.instagram.com/mr.shmix/" target="_blank"><i
                                 class="fa-brands fa-instagram fa-2xl"></i></a>
