--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 	<script src="https://kit.fontawesome.com/6dbd7dcc73.js" crossorigin="anonymous"></script>
 	<!-- <script src="test.js"></script> -->
 	<footer>
-		<em>&copy;2023 All rights reserved.</em>
+		<br>
+		<center>
+			<em>&copy;2023 All rights reserved.</em>
+		</center>
 	</footer>
 </body>
 
